new-project-layout

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,7 +63,7 @@ a.active, a:hover {
         height: 100vh;
         position: fixed;
         border: 3px solid white;
-        background: url(https://images.unsplash.com/photo-1557683304-673a23048d34?q=80&w=1700&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
+        background: linear-gradient(to right, rgb(0, 120, 185), rgb(0, 40, 61));
         top: 100px;
         left: -100%;
         text-align: center;
