--- a/assets/css/projects.css
+++ b/assets/css/projects.css
@@ -5,52 +5,34 @@ margin-bottom: 20px;
 }
 section h1 {
     text-align: center;
-    font-size: 40px;
+    font-size: 50px;
     line-height: 60px;
     margin-bottom: 50px;
     padding: 20px;
 }
-.block-container {
+.project-list {
+    width: 90%;
+    margin: 0 auto;
+}
+.project-row {
+    border-bottom: 2px solid white;
     display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: flex-end;
+    padding-bottom: 10px;
+    margin-bottom: 20px;
 }
-/* projects blocks */
-.block {
-    width: 500px;
-    height: 300px;
-    border: 1px solid white;
-    display: inline-block;
-    margin: 20px;
-    background: linear-gradient(rgb(0, 87, 133), rgb(0, 16, 24));
+.project-name {
+    font-size: 30px;
 }
-.block:hover {
-    border: 3px solid white;
-    transition: 200ms;
+.project-date {
+    font-size: 20px;
 }
-.block p {
-    font-size: 40px;
-    padding: 10px;
-    text-align: center;
-    margin-bottom: 100px;
-}
-.tools {
-    text-align: center;
-}
-.tools i {
-    padding: 0 5px;
-    font-size: 80px;
-}
-.tools i div {
-    font-size: 10px;
-}
-/* media queries */
-@media (max-width: 521px) {
-    .block {
-        height: 350px;
+@media (max-width: 701px) {
+    .project-name {
+        font-size: 25px;
     }
-    .block p {
-        margin-bottom: 60px;
+    .project-date {
+        font-size: 15px;
     }
-
 }
