--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -1,11 +1,8 @@
-/* page content */
-section .container {
-    max-width: 80%;
+section {
+    width: 80%;
     margin: 0 auto;
-    padding: 20px;
-    line-height: 40px;
+    margin-bottom: 20px;
 }
-/* social */
 .social {
     text-align: center;
     font-size: 40px;
@@ -17,23 +14,24 @@ section .container {
 }
 .about {
     text-align: justify;
-    padding: 20px;
 }
 .about h1 {
     text-align: center;
-    font-size: 40px;
+    font-size: 50px;
     line-height: 60px;
+    margin-bottom: 50px;
+    padding: 20px;
 }
 .about p {
-    margin-top: 20px;
-    font-size: 30px;
+    margin-top: 24px;
+    font-size: 24px;
     line-height: 40px;
 }
 .about h2 {
     font-size: 36px;
 }
 .about p,
-section .container {
+section {
     margin-bottom: 30px;
 }
 .about a:hover {
@@ -46,7 +44,7 @@ section .container {
 .spacer {
     height: 200px;
 }
-/* media query */
+
 @media (min-width: 350px) {
     .social li {
         display: inline-block;
@@ -54,12 +52,9 @@ section .container {
     }
 
 }
-@media (max-width: 700px) {
+@media (max-width: 901px) {
     .about p {
         font-size: 18px;
-    }
-    .about h1 {
-        font-size: 36px;
     }
     .about h2 {
         font-size: 32px;
