--- a/assets/css/contacts.css
+++ b/assets/css/contacts.css
@@ -1,4 +1,3 @@
-/* form */
 .form-container {
     line-height: 1.2;
     display: flex;
@@ -8,15 +7,15 @@
 .form-header {
     text-align: center;
     width: 80%;
-    margin: 40px 0;
+    margin: 0 auto;
     padding: 10px;
 }
 .form-header h1 {
-    font-size: 40px;
+    font-size: 50px;
     margin-bottom: 30px;
 }
 .form-header p {
-    font-size: 30px;
+    font-size: 24px;
     margin-top: 20px;
 }
 .form {
@@ -48,7 +47,6 @@
 .form-row textarea {
     font-size: 20px;
     color: black;
-    border: 1px solid #D6D9DC;
     border-radius: 10px;
     min-height: 300px;
     margin-bottom: 10px;
@@ -70,7 +68,7 @@
 .form-row button:active {
     background-color: rgb(255, 230, 0);
 }
-/* social */
+
 .social {
     text-align: center;
     font-size: 40px;
@@ -84,7 +82,7 @@
     color: rgb(255, 230, 0);
     transition: 0.5s;
 }
-/* media query */
+
 @media only screen and (min-width: 700px) {
     .form-header,
     .form {
